--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -30,7 +30,7 @@ const { Content, remarkPluginFrontmatter } = await render(entry);
 	description={entry.data.description!}
 	minutesRead={remarkPluginFrontmatter.minutesRead}
 	pubDate={entry.data.pubDate!}
-	title={`${entry.data.title} | Gianmarco Cavallo`}
+	title={`${entry.data.title} | Nguyen Tien Hoach`}
 	url={`blog/${entry.id}`}
 >
 	<Content />
