--- a/src/layouts/BasicLayout.astro
+++ b/src/layouts/BasicLayout.astro
@@ -63,7 +63,7 @@ const schema =
 						url: `${Astro.url.origin}/preview.png`,
 					},
 				},
-				datePublished: pubDate || new Date().toISOString(),
+				datepubDate: pubDate || new Date().toISOString(),
 				dateModified: pubDate || new Date().toISOString(),
 			};
 ---
