Update post blog design

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,9 +78,15 @@ const posts = (await getCollection("blog"))?.sort(
 							//   href={`/blog/${post.id}`}
 							// >
 							<div class="list-none w-full text-neutral-100 hover:text-neutral-400 ease-in-out transition-colors border-b-neutral-400 border-dashed border-b-1 my-0">
-								<p class="inline-block whitespace-nowrap text-xs">
-									{post.data.title?.slice(0, 15) + "..."}
-								</p>
+								{post.data.title && (
+									<p class="inline-block whitespace-nowrap text-xs">
+										{post.data.title.length > 35
+											? post.data.title.slice(0, 35) +
+												"..."
+											: post.data.title}
+									</p>
+								)}
+								<br />
 								{post.data.pubDate && (
 									<time
 										class="text-right tabular-nums text-xs"
