--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ const posts = (await getCollection("blog"))?.sort(
 			rowSpan="md:row-span-1"
 			title="Countries I visited"
 		>
-			<div class="h-full w-full absolute inset-0 -z-10">
+			<div class="h-full w-full absolute inset-0 z-10 top-0 left-0">
 				<Globe client:load />
 			</div>
 		</Card>
