--- a/src/components/Card/index.astro
+++ b/src/components/Card/index.astro
@@ -30,7 +30,7 @@ const { title, body, colSpan, rowSpan, href, colorText, height } = Astro.props;
 				href={href}
 			>
 				<Icon
-					class="h-6 float-right group-hover:text-primary-500 group-hover:translate-x-1 group-hover:-translate-y-1 transition-transform ease-in-out duration-100 z-20"
+					class="h-6 float-right group-hover:text-primary-500 group-hover:translate-x-1 group-hover:-translate-y-1 transition-transform ease-in-out duration-100 z-20 relative"
 					name="ri:arrow-right-up-line"
 				/>
 				<Content body={body} title={title}>
