Fix path for globa.css

--- a/src/layouts/BasicLayout.astro
+++ b/src/layouts/BasicLayout.astro
@@ -1,5 +1,5 @@
 ---
-import "./src/styles/global.css";
+import "../styles/global.css";
 import { LINKS } from "../lib/constants";
 
 interface Props {
@@ -73,7 +73,7 @@ const schema =
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta content="width=device-width" name="viewport" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href="/favicon.ico" rel="icon" type="image/x-icon" />
 		<meta content={Astro.generator} name="generator" />
 		<title>{title}</title>
