--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -9,7 +9,7 @@ import { Image } from "astro:assets";
 
 <Card colSpan="md:col-span-3" rowSpan="md:row-span-4">
 	<div class="flex w-full h-full">
-		<div class="flex flex-col justify-between md:max-h-[300px] gap-4">
+		<div class="flex flex-col justify-between md:max-h-[300px] gap-4 z-2">
 			<div class="flex flex-col h-full">
 				<h6 class="text-sm font-light m-0 text-gray-500">welcome</h6>
 				<p class="m-0 font-light text-xl">
@@ -49,7 +49,7 @@ import { Image } from "astro:assets";
 		</div>
 		<Image
 			alt="memoji of Nguyen Tien Hoach"
-			class="w-auto max-h-[300px] select-none absolute right-[-110px] bottom-[-20px] z-[-1] opacity-50 md:opacity-100 md:relative md:right-auto md:bottom-auto md:z-auto pointer-events-none"
+			class="w-auto max-h-[300px] select-none absolute right-[-110px] bottom-[-20px] z-1 opacity-50 md:opacity-100 md:relative md:right-auto md:bottom-auto md:z-auto pointer-events-none"
 			height="300"
 			src="/me.webp"
 			width="300"
