--- a/src/layouts/BasicLayout.astro
+++ b/src/layouts/BasicLayout.astro
@@ -70,7 +70,7 @@ const schema =
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
