--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const posts = (await getCollection("blog"))?.sort(
 			colorText="text-neutral-900"
 			colSpan="md:col-span-1"
 			href="travel"
-			rowSpan="md:row-span-2"
+			rowSpan="md:row-span-4"
 			title="Countries I visited"
 		>
 			<div class="h-full w-full absolute inset-0 z-10 top-0 left-0">
@@ -65,7 +65,7 @@ const posts = (await getCollection("blog"))?.sort(
 		<Card
 			colSpan="md:col-span-1"
 			href="/blog"
-			rowSpan="md:row-span-2 flex gap-1"
+			rowSpan="md:row-span-4 flex gap-1"
 			title="Blog"
 		>
 			<div class="flex flex-col gap-1">
@@ -120,6 +120,12 @@ const posts = (await getCollection("blog"))?.sort(
 				</p>
 			</div>
 		</Card>
+		<Card
+			colSpan="md:col-span-1"
+			rowSpan="md:row-span-1"
+			href="https://hoachnt-lofi.netlify.app/"
+			title="My favorite songs"
+		/>
 		<Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
 			<p class="text-xs">
 				© 2024 · Crafted with ♥️ using <a
