Update music link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -123,7 +123,7 @@ const posts = (await getCollection("blog"))?.sort(
 		<Card
 			colSpan="md:col-span-1"
 			rowSpan="md:row-span-1"
-			href="https://hoachnt-lofi.netlify.app/"
+			href="https://music.hoachnt.com/"
 			title="My favorite songs"
 		/>
 		<Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
